--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "typescript": "^1.8.10",
     "webpack": "^1.13.1",
     "webpack-core": "^0.6.8",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "gl-matrix": "2.0"
   },
   "scripts": {
     "dev": "webpack-dev-server --config webpack.config.dev.js",
