--- a/package.json
+++ b/package.json
@@ -14,18 +14,23 @@
   "author": "Ben Jack",
   "license": "GPL-3.0+",
   "devDependencies": {
-    "babel-loader": "^6.2.4",
-    "babel-polyfill": "^6.9.0",
-    "babel-preset-es2015": "^6.9.0",
+    "babel": "^6.23.0",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "gl-matrix": "2.0",
     "ts-loader": "^0.8.2",
     "typescript": "^1.8.10",
-    "webpack": "^1.13.1",
+    "webpack": "^1.14.0",
     "webpack-core": "^0.6.8",
-    "webpack-dev-server": "^1.14.1",
-    "gl-matrix": "2.0"
+    "webpack-dev-server": "^1.14.1"
   },
   "scripts": {
     "dev": "webpack-dev-server --config webpack.config.dev.js",
     "prepublish": "webpack"
+  },
+  "dependencies": {
+    "gl-matrix": "^2.0.0"
   }
 }
