--- a/package.json
+++ b/package.json
@@ -14,18 +14,23 @@
   "author": "Ben Jack",
   "license": "GPL-3.0+",
   "devDependencies": {
+    "babel-core": "^6.23.1",
     "babel-loader": "^6.2.4",
-    "babel-polyfill": "^6.9.0",
-    "babel-preset-es2015": "^6.9.0",
-    "ts-loader": "^0.8.2",
-    "typescript": "^1.8.10",
-    "webpack": "^1.13.1",
-    "webpack-core": "^0.6.8",
-    "webpack-dev-server": "^1.14.1",
-    "gl-matrix": "2.0"
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "ts-loader": "^2.0.1",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.1"
   },
   "scripts": {
     "dev": "webpack-dev-server --config webpack.config.dev.js",
     "prepublish": "webpack"
+  },
+  "dependencies": {
+    "babel-runtime": "^6.23.0",
+    "bj-utils": "^1.0.7",
+    "gl-matrix": "2.0",
+    "interaction-centre": "^1.0.7",
+    "quick-canvas": "^1.0.2"
   }
 }
