--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "license": "GPL-3.0+",
   "devDependencies": {
     "babel-core": "^6.23.1",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-loader": "^6.4.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "ts-loader": "^2.0.1",
     "webpack": "^2.2.1",
@@ -27,10 +27,10 @@
     "prepublish": "webpack"
   },
   "dependencies": {
-    "babel-runtime": "^6.23.0",
-    "bj-utils": "^1.0.7",
+    "babel-polyfill": "^6.23.0",
+    "bj-utils": "^1.0.11",
     "gl-matrix": "2.0",
-    "interaction-centre": "^1.0.7",
-    "quick-canvas": "^1.0.2"
+    "interaction-centre": "^1.0.10",
+    "quick-canvas": "^1.0.6"
   }
 }
