--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
 
     "target": "ES2015",
-    "module": "commonjs",
+    "module": "es6",
+    "moduleResolution": "node",
     "noImplicitAny": false,
     "removeComments": true,
     "noLib": false,
@@ -13,6 +14,5 @@
     "sourceMap": true
   },
   "compileOnSave":false,
-  "exclude": ["node_modules", "lib"],
-  "externalTranspiler": "babel"
+  "exclude": ["node_modules", "lib"]
 }
