--- a/package.json
+++ b/package.json
@@ -1,36 +1,50 @@
 {
-  "name": "cats-eye-grid-builder",
-  "version": "0.1.0",
-  "description": "Cats-eye grid building tool for the web",
-  "main": "catseye-grid-builder.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/benthejack-vuw/catseye_grid_builder"
-  },
-  "keywords": [
-    "graphics",
-    "cats eye"
-  ],
+  "name": "react-boilerplate",
+  "version": "1.0.0",
+  "main": "index.js",
   "author": "Ben Jack",
-  "license": "GPL-3.0+",
-  "devDependencies": {
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.4.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0",
-    "ts-loader": "^2.0.1",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.1"
-  },
+  "license": "MIT",
   "scripts": {
-    "dev": "webpack-dev-server --config webpack.config.dev.js",
-    "prepublish": "webpack"
+    "dev": "webpack-dev-server",
+    "build": "webpack -p --env production",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json"
   },
   "dependencies": {
-    "babel-polyfill": "^6.23.0",
-    "bj-utils": "^1.0.11",
-    "gl-matrix": "2.0",
-    "interaction-centre": "^1.1.7",
-    "quick-canvas": "^1.0.9"
+    "@babel/core": "7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "8.0.6",
+    "css-loader": "^3.1.0",
+    "dotenv": "^8.0.0",
+    "express": "4.17.1",
+    "firebase": "^6.3.5",
+    "history": "^4.9.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.12.0",
+    "normalize.css": "^8.0.1",
+    "numeraljs": "^1.5.6",
+    "raf": "^3.4.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-modal": "^3.9.1",
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
+    "react-with-direction": "^1.3.0",
+    "redux": "^4.0.4",
+    "redux-mock-store": "^1.5.3",
+    "redux-thunk": "^2.3.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.39.1"
+  },
+  "devDependencies": {
+    "cross-env": "^5.2.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.4.0",
+    "jest": "^24.8.0",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.7.2"
   }
 }
