--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
     "numeraljs": "^1.5.6",
+    "quick-canvas": "^1.0.17",
     "raf": "^3.4.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -45,6 +46,6 @@
     "enzyme-to-json": "^3.4.0",
     "jest": "^24.8.0",
     "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.7.2"
+    "webpack-dev-server": "3.8.0"
   }
 }
