--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "8.0.6",
+    "babel-polyfill": "^6.26.0",
+    "cat-rom-spline-generic": "^0.0.6",
     "css-loader": "^3.1.0",
     "dotenv": "^8.0.0",
     "express": "4.17.1",
     "firebase": "^6.3.5",
+    "gl-matrix": "^3.1.0",
     "history": "^4.9.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
